Removed some old useless files. Renamed few

--- a/investing.html
+++ b/investing.html
@@ -9,12 +9,12 @@
 <div class="container">
   <div class="top">
     <header>
-    <img src="images/wl-logo.png" width="470" height="95" alt="Web Lizards Logo"> 
+    <img src="images/wl-logo.png" width="470" height="95" alt="Web Lizards Logo">
     </header>
   </div>
   <div class="mainmenu">
   	<nav>
-  <a href="index.php">About Us</a> - <a href="ventures.php">Active Ventures</a> - <a href="investing.php">Investment Opportunities</a>
+  <a href="index.php">About Us</a> - <a href="ventures.html">Active Ventures</a> - <a href="investing.html">Investment Opportunities</a>
   </nav>
   </div>
 <div class="main">
