Disabled ventures, since they do not really exist any more.

--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
 
 <div class="container grad">
   <header>
-    <img id="header" src="images/wl-logo.png" width="470" height="95" alt="Web Lizards Logo"> 
+    <img id="header" src="images/wl-logo.png" width="470" height="95" alt="Web Lizards Logo">
   </header>
 
   <nav id="mainNav">
-    <a id="aboutLink" onclick="showPane('mainArticle')" href="#">About Us</a> - <a id="ventureLink"  onclick="showPane('ventures')" href="#">Active Ventures</a> - <a id="investLink"  onclick="showPane('invest')" href="#">Investment Opportunities</a>
+    <a id="aboutLink" onclick="showPane('mainArticle')" href="#">About Us</a> - <a id="investLink"  onclick="showPane('invest')" href="#">Investment Opportunities</a><!-- - <a id="ventureLink"  onclick="showPane('ventures')" href="#">Active Ventures</a> -->
   </nav>
 
   <section>
@@ -60,13 +60,13 @@
         <p> We started a joint venture with a leading European mobile value-added service provider, Wap Oneline, Ltd., and our management team founded Wap Oneline USA, LLC. We expanded throughout North and South America, where we were pioneers in the fields of mobile messaging and marketing services. </p>
         <p> Recently, with a growing need for mobile apps, we started on yet another venture utilizing our great industry connections and broad understanding of mobile ecosystems, along with our coding and design expertise, to help people and enterprises to connect, promote, and operate using mobile apps. Deja Vu from the dot-com era.</p>
       </div>
-
+      <!--
       <div id="ventures">
         <h1>Active Ventures</h1>
         <a id="wollink" href="http://waponelineusa.com" target="_blank" title="WapOneline, LLC"><img src="images/wol.png" alt="WapOneline" width="258" height="76" ></a>
         <a id="lizlink" href="http://applizards.com" target="_blank" title="AppLizards"><img src="images/applizards.png" alt="AppLizards" width="291" height="74"></a>
       </div>
-
+      -->
       <div id="invest">
         <h1>Investment Opportunities</h1>
         <p> We are open minded folk, and we are always interested in hearing about and getting involved in new opportunities. We saw and seized an opportunity for a joint venture in mobile messaging and marketing services over a decade ago, which has given us great pride.</p>
